tests/valid/trait/method_call_explicit_ufcs_local_annotated_empty_struct_literal_receiver.facet
struct Token {}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Token {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x: unrestricted Token = Token {};
  (<unrestricted Token as Runner>::run x)
}
