tests/invalid/trait/assoc_projection_struct_field_mismatch.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

struct Box {
  value: unrestricted <unrestricted isize as Iterator>::Item
}

fn main() -> unrestricted Box {
  Box { value = true }
}
